--- a/src/app/components/footer/footer.html
+++ b/src/app/components/footer/footer.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div clas="row">
-        <div class="small12 large4">
+        <div class="small-12 large-4 columns">
             <h4 class="footerlinks">Follow Us</h4>
             <ul>
                 <li><a href=""><i class="ion-social-twitter-outline"></i></a></li>
@@ -9,9 +9,10 @@
                 <li><a href=""><i class="ion-ios-email-outline"></i></a></li>
             </ul>
         </div>
-        <div class="small12 large8">
+        <div class="small-12 large-8 columns">
             <p class="copyright">
                 Rights Reserved to MangaRai (2015).
+                Contented provided with much <i class="ion-ios-heart-outline"></i> from <a href="http://www.mangaeden.com/" class="href">MangaEden API.</a>
             </p>
         </div>
 
