--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -2,13 +2,14 @@
  *  If you want to override some foundation settings, you have to change values here.
  *  The list of settings values are listed here bower_components/foundation/scss/foundation/_settings.scss
  */
-$topbar-bg-color: #5AADBB;
+$topbar-bg-color: #5aadbb;
 
 /**
  *  The import of foundation is made manually because there is still no links of the
  *  sass version in their bower.json...
  */
-@import '../../bower_components/foundation/scss/foundation';
+@import "../../bower_components/foundation/scss/foundation";
+
 
 /**
  *  Do not remove this comments bellow. It's the markers used by wiredep to inject
@@ -17,24 +18,38 @@ $topbar-bg-color: #5AADBB;
 // bower:scss
 // endbower
 
+body,
+html,
+nav,
+.row,
+.container,
+.ng-scope {
+    height: 100%;
+}
+
 .browsehappy {
-  margin: 0.2em 0;
-  background: #ccc;
-  color: #000;
-  padding: 0.2em 0;
+    margin: .2em 0;
+    padding: .2em 0;
+    color: #000;
+    background: #ccc;
 }
 
 .panel {
-  margin-top: 50px;
+    margin-top: 50px;
 }
 
 .th {
-  width: 100%;
-  height: 200px;
+    width: 100%;
+    height: 200px;
 
-  img.right {
-    width: 50px;
-  }
+    img.right {
+        width: 50px;
+    }
+}
+
+//override row width
+.row {
+    max-width: 100%;
 }
 
 /**
@@ -43,3 +58,21 @@ $topbar-bg-color: #5AADBB;
  */
 // injector
 // endinjector
+
+
+/**
+ * Navigation Section
+ */
+h1 {
+    margin-top: 0;
+}
+
+nav {
+    color: white;
+    background: black;
+}
+
+.main-nav {
+    height: 100%;
+    padding: 0;
+}
