--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,36 +1,31 @@
 <div class="container">
 
-  <div>
-    <acme-navbar creationDate="main.creationDate" />
-  </div>
-
-  <div class="row">
-    <div class="large-12 large-text-center columns">
-      <div class="panel">
-        <h1>'Allo, 'Allo!</h1>
-        <img src="assets/images/yeoman.png" alt="I'm Yeoman"><br>
-        <p>Always a pleasure scaffolding your apps.</p>
-        <p class="animated infinite" ng-class="main.classAnimation">
-          <a href="#" class="button success" ng-click="main.showToastr()">Splendid Toastr</a>
-        </p>
-        <p>
-          With ♥ thanks to the contributions of<acme-malarkey extra-values="['Yeoman', 'Gulp', 'Angular']" />
-        </p>
-      </div>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="large-4 columns" ng-repeat="awesomeThing in main.awesomeThings | orderBy:'rank'">
-      <div class="th">
-        <img class="right" ng-src="assets/images/{{ awesomeThing.logo }}" alt="{{ awesomeThing.title }}">
-        <div class="caption">
-          <h3>{{ awesomeThing.title }}</h3>
-          <p>{{ awesomeThing.description }}</p>
-          <p><a ng-href="{{ awesomeThing.url }}">{{ awesomeThing.url }}</a></p>
+<!--    <div>
+<acme-navbar/>
+</div> -->
+<!-- App Body -->
+    <div class="row">
+        <div class="main-nav large-3 small-12 columns">
+            <nav>
+                <section class="logo">
+                    <h1>MangaRai</h1>
+                </section>
+                <section class="nav-items">
+                    <ul>
+                        <li><i class="ion-ios-time-outline"></i> Recent</li>
+                        <li><i class="ion-fireball"></i> Popular</li>
+                        <li><i class="ion-ios-bookmarks-outline"></i> Bookmarks</li>
+                    </ul>
+                </section>
+            </nav>
         </div>
-      </div>
+
+        <div class="large-9 small-12 columns">
+            <main ng-controller='RecentController as recent'>
+                {{recent.covers}}
+                {{recent.list}}
+            </main>
+        </div>
     </div>
-  </div>
 
 </div>
