--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -9,6 +9,7 @@ $topbar-bg-color: #5aadbb;
  *  sass version in their bower.json...
  */
 @import "../../bower_components/foundation/scss/foundation";
+@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
 
 
 /**
@@ -18,6 +19,16 @@ $topbar-bg-color: #5aadbb;
 // bower:scss
 // endbower
 
+// Variables
+$font-family: 'Lato', arial, sans-serif;
+
+// Colors
+$light-grey: #D8D8D8;
+$dark-grey: #A2A3A3;
+$font-grey: #5D6061;
+$font-light-grey: #838388;
+
+;
 body,
 html,
 nav,
@@ -25,13 +36,22 @@ nav,
 .container,
 .ng-scope {
     height: 100%;
+    font-family: $font-family;
 }
 
-.browsehappy {
-    margin: .2em 0;
-    padding: .2em 0;
-    color: #000;
-    background: #ccc;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    font-family: $font-family;
+    overflow: auto;
+}
+
+.app-body {
+    background-color: $light-grey;
 }
 
 .panel {
@@ -71,6 +91,7 @@ nav {
     position: fixed;
     color: white;
     background: black;
+    width: 16.66667%;
 }
 
 .main-nav {
@@ -80,4 +101,70 @@ nav {
     li {
         list-style-type: none;
     }
+}
+
+// Manga Component
+
+.manga-component {
+    background-color: white;
+    margin: 2% 1%;
+
+    @media only screen and (min-width: 64.0625em) {
+        width: 31.33333%
+    }
+
+    .manga-summary {
+        padding: 0.75em 1em;
+    }
+
+    .cover-wrapper img {
+        display: block;
+        margin: 0 auto;
+    }
+
+    h2 {
+        text-transform: capitalize;
+        color: $font-grey;
+    }
+
+    p {
+        font-size: 16px;
+        color: $font-light-grey;
+        line-height: 20px;
+    }
+}
+
+.flex-wrapper {
+    display : flex
+}
+
+// Animations
+
+.animate-enter,
+.animate-leave
+{
+    -webkit-transition: 400ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
+    -moz-transition: 400ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
+    -ms-transition: 400ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
+    -o-transition: 400ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
+    transition: 400ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
+    position: relative;
+    display: block;
+    overflow: hidden;
+    text-overflow: clip;
+    white-space:nowrap;
+}
+
+.animate-leave.animate-leave-active,
+.animate-enter {
+    opacity: 0;
+    width: 0px;
+    height: 0px;
+}
+
+.animate-enter.animate-enter-active,
+.animate-leave {
+    opacity: 1;
+    width: 150px;
+    height: 30px;
 }
