--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -103,39 +103,9 @@ nav {
     }
 }
 
-// Manga Component
-
-.manga-component {
-    background-color: white;
-    margin: 2% 1%;
-
-    @media only screen and (min-width: 64.0625em) {
-        width: 31.33333%
-    }
-
-    .manga-summary {
-        padding: 0.75em 1em;
-    }
-
-    .cover-wrapper img {
-        display: block;
-        margin: 0 auto;
-    }
-
-    h2 {
-        text-transform: capitalize;
-        color: $font-grey;
-    }
-
-    p {
-        font-size: 16px;
-        color: $font-light-grey;
-        line-height: 20px;
-    }
-}
-
 .flex-wrapper {
-    display : flex
+    display : flex;
+    flex-wrap: wrap;
 }
 
 // Animations
