--- a/src/app/main/_main.scss
+++ b/src/app/main/_main.scss
@@ -1,42 +1,134 @@
-// Manga Component
+/**
+ * MANGA COMPONENT GENERAL
+ */
 
 .manga-component {
-    background-color: white;
+    position: relative;
+    height: auto;
     margin: 2% 1%;
     padding: 0;
-    box-shadow: 0 2px 7.68px .32px rgba(0, 0, 0, 0.06),0 12px 26px 0 rgba(0, 0, 0, 0.01);
-    border: 1px solid rgb(211, 206, 206);
+    border: 1px solid #f1f1f1;
+    background-color: white;
+    box-shadow: 0 2px 7.68px .32px rgba(0, 0, 0, .06),0 12px 26px 0 rgba(0, 0, 0, .01);
+
+    perspective: 1700px;
+    perspective-origin: 0 50%;
 
     @media only screen and (min-width: 64.0625em) {
-        width: 30.33333%
+        width: 22.93333%;
+
+        flex-grow: 1;
+    }
+
+    figure {
+        position: relative;
+    }
+
+    figcaption {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 65%;
+        height: 100%;
+        padding: 20px;
+        color: #ed4e6e;
+        transition: transform .4s, opacity .1s .3s;
+        transform: rotateY(-90deg);
+        transform-origin: 0 0;
+        opacity: 0;
+        background: #2c3f52;
+        backface-visibility: hidden;
+
+        a:hover {
+            background: #c74f67;
+        }
+
+        .title {
+            color: white;
+            font-size: 14px;
+        }
+
+        a {
+            position: absolute;
+            bottom: 15%;
+            display: inline-block;
+            padding: 5px 10px;
+            border-radius: 2px;
+            color: #fff;
+            transition: background .3s ease;
+            text-align: center;
+            background: #ed4e6e;
+        }
     }
 
     .manga-summary {
-        padding: 0.75em 1em;
+        padding: .8em 1em;
     }
 
-    .cover-wrapper img {
+    .manga-detail {
+        padding: 0 .8rem .8rem;
+
+        .author {
+            color: #9a9a9a;
+            font-family: $font-notica;
+        }
+    }
+
+    .cover-wrapper {
         display: block;
-        max-height: 350px;
         width: 100%;
+        height: 250px;
+        max-height: 350px;
+        margin: 0;
+
+        &:hover {
+            figcaption {
+                transition: transform .4s, opacity .1s;
+                transform: rotateY(0deg);
+                opacity: 1;
+            }
+
+            .cover {
+                margin-left: 35%;
+                transition: all .4s;
+            }
+        }
+    }
+
+    .cover {
+        background-size: cover;
+    }
+
+    .cover-overflow-wrap {
+        overflow: hidden;
+        width: 100%;
+        height: 100%;
     }
 
     h2 {
-        text-transform: capitalize;
-        color: $font-grey;
+        min-height: 59px;
+        padding: 0 .8rem .8rem;
         border-bottom: 1px solid rgb(236, 233, 233);
+        color: $font-grey;
+        font-family: $font-notica;
+        font-weight: 700;
+        line-height: 25px;
+        text-transform: capitalize;
     }
 
     p {
-        font-size: 16px;
         color: $font-light-grey;
+        font-size: 14px;
         line-height: 20px;
+
+        overflow-wrap: break-word;
     }
 
     .no-image {
-        background-color: #E4E3E3;
-        min-height: 363px;
+        background-color: #e4e3e3;
     }
 
+    .manga-spec {
+        margin-bottom: 1rem;
+    }
 }
-
