--- a/src/app/views/nav.html
+++ b/src/app/views/nav.html
@@ -1,15 +1,27 @@
 <!-- Navigation -->
-<div class="main-nav large-2 small-12 columns">
     <nav>
         <section class="logo">
             <h1>MangaRai</h1>
         </section>
         <section class="nav-items">
-            <ul>
-                <li><i class="ion-ios-time-outline"></i> Recent</li>
-                <li><i class="ion-fireball"></i> Popular</li>
-                <li><i class="ion-ios-bookmarks-outline"></i> Bookmarks</li>
-            </ul>
+            <div class="menu-box">
+                <div class="title">Main Menu</div>
+                <ul>
+                    <li><i class="ion-ios-time-outline"></i> Recent</li>
+                    <li><i class="ion-fireball"></i> Popular</li>
+                    <li><i class="ion-ios-bookmarks-outline"></i> Bookmarks</li>
+                </ul>
+            </div>
+
+            <div class="menu-box">
+                <div class="title">Bookmarks</div>
+                <ul>
+                    <li>Bookmark 1</li>
+                    <li>Bookmark 2</li>
+                    <li>Bookmark 3</li>
+                    <li>etc</li>
+                    <li>Bookmark 1</li>
+                </ul>
+            </div>
         </section>
     </nav>
-</div>
