--- a/src/app/views/read.html
+++ b/src/app/views/read.html
@@ -1,18 +1,22 @@
-<nav class="read-nav">
-    <a ui-sref="home">Home</a>
-    <select ng-model="read.model.chapterNum" ng-options="chapter[0] for chapter in read.model.manga.chapters">
-        <option value="">Chapters:</option>
-    </select>
-</nav>
+<div class="read-wrapper">
+    <nav class="read-nav">
+        <a ui-sref="home">Home</a>
+        <a ui-sref="detail({ id: vm.model.mangaId })">Return to Details</a>
+        <form ng-submit="vm.action.getPages()">
+        <select ng-options="chapter[0] as chapter[0] for chapter in vm.model.manga.chapters" ng-model="vm.model.chapterNum">
+            <option value="">Chapters:</option>
+            <option value="" selected>3</option>
+        </select>
+        </form>
+    </nav>
 
-<section class="page-body">
-    <slick init-onload="true" slidesToShow="1">
-        <div ng-repeat=" page in read.model.pages | orderBy: 'num' " dom-ready>
-            <picture>
-                 <source ng-srcset="//cdn.mangaeden.com/mangasimg/600x/{{ page.imgUrl }} 600w, //cdn.mangaeden.com/mangasimg/{{ page.imgUrl }} {{ page.width }}w">
-                 <img ng-src="//cdn.mangaeden.com/mangasimg/{{ page.imgUrl }}" alt="Manga: {{ read.model.title }} - Chapter: {{ read.model.chapterNum }} - Page: {{ page.num }}">
-             </picture>
-            {{ page.num }}
-        </div>
-    </slick>
-</section>
+    <ks-swiper-container class="read-container" keyboardControler="true" loop="false" show-nav-buttons="false" slides-per-view="1">
+        <ks-swiper-slide class="swiper-slide" ng-repeat=" page in vm.model.pages | orderBy: 'num' ">
+                <picture>
+                     <source ng-srcset="//cdn.mangaeden.com/mangasimg/600x/{{ page.imgUrl }} 600w, //cdn.mangaeden.com/mangasimg/{{ page.imgUrl }} {{ page.width }}w">
+                     <img ng-src="//cdn.mangaeden.com/mangasimg/{{ page.imgUrl }}" alt="Manga: {{ vm.model.title }} - Chapter: {{ vm.model.chapterNum }} - Page: {{ page.num }}">
+                 </picture>
+            </div>
+        </ks-swiper-slide>
+    </ks-swiper-container>
+</div>
