--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -9,7 +9,7 @@ $topbar-bg-color: #5aadbb;
  *  sass version in their bower.json...
  */
 @import "../../bower_components/foundation/scss/foundation";
-@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700|Noticia+Text:400,700);
+@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700|Maven+Pro);
 
 
 /**
@@ -21,13 +21,23 @@ $topbar-bg-color: #5aadbb;
 
 // Variables
 $font-lato: 'Lato', arial, sans-serif;
-$font-notica: 'Noticia Text', serif;
+$font-maven: 'Maven Pro', sans-serif;
 
 // Colors
 $light-grey: #D8D8D8;
 $dark-grey: #444748;
 $font-grey: #5D6061;
 $font-light-grey: #838388;
+
+$body-grey: #f4f4f4;
+
+
+// Padding Sizes
+$base: 10px;
+$base-md: 20px;
+$base-lg: 30px;
+$base-xl: 45px;
+$base-xxl: 60px;
 
 ;
 body,
@@ -56,15 +66,7 @@ h2 {
 }
 
 body {
-    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#f9f9f9+0,ededed+100 */
-    background: rgb(249,249,249); /* Old browsers */
-    background: -moz-linear-gradient(top,  rgba(249,249,249,1) 0%, rgba(237,237,237,1) 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(249,249,249,1)), color-stop(100%,rgba(237,237,237,1))); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top,  rgba(249,249,249,1) 0%,rgba(237,237,237,1) 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top,  rgba(249,249,249,1) 0%,rgba(237,237,237,1) 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(top,  rgba(249,249,249,1) 0%,rgba(237,237,237,1) 100%); /* IE10+ */
-    background: linear-gradient(to bottom,  rgba(249,249,249,1) 0%,rgba(237,237,237,1) 100%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f9f9f9', endColorstr='#ededed',GradientType=0 ); /* IE6-9 */
+    background: $body-grey;
 }
 
 .panel {
@@ -101,24 +103,47 @@ h1 {
 }
 
 nav {
-    position: fixed;
-    color: white;
-    background: black;
-    width: 16.66667%;
+    padding: .4em;
 }
 
 .main-nav {
     height: 100%;
     padding: 0;
+    position: fixed;
+    background-color: #42464D;
+
 
     li {
         list-style-type: none;
     }
+
+    .menu-box {
+        padding: $base/2;
+        margin: $base 0;
+        color: 1px solid #D8D8D8;
+
+        .title {
+            padding: $base 12px;
+            border-bottom: 1px solid #585E67;
+        }
+    }
+}
+
+.login-bar {
+    height: initial;
 }
 
 .app-view {
-    width: 83.3333%;
+    padding: 2em;
+}
+
+.app-body {
+    padding: 1em;
     float: right;
+}
+
+.side-details {
+    border-left: 1px solid $body-grey;
 }
 
 .flex-wrapper {
