--- a/src/app/styles/_read.scss
+++ b/src/app/styles/_read.scss
@@ -2,27 +2,42 @@
  * Reading Stylesheet
  */
 .read-nav {
-    position: absolute;
+    position: fixed;
     top: 0;
-    z-index: 1;
-    height: initial;
+    z-index: 2;
     width: 100%;
+    height: initial;
     height: 10%;
 
     select {
-        width: 15%;
-        display: inline-block;
         right: 15%;
+        display: inline-block;
+        width: 15%;
     }
 }
 
 .manga-read {
     position: absolute;
-    height: 100%;
+    overflow-x: hidden;
     width: 100%;
-}
+    height: 100%;
+    padding-bottom: 11%;
+    background-color: black;
 
-.page-body {
-    position: absolute;
-    top: 10%;
+    img {
+        display: block;
+        width: 80%;
+        margin: 0 auto;
+    }
+
+    .read-container {
+        position: absolute;
+        top: 11%;
+        width: 100%;
+    }
+
+    .swiper-slide {
+        width: 80%;
+        cursor: pointer;
+    }
 }
