--- a/src/app/views/main.html
+++ b/src/app/views/main.html
@@ -3,15 +3,12 @@
         <div class="row flex-wrapper" ng-repeat="group in recent.model.mangaList">
             <div ng-repeat="manga in group" class="small-12 large-3 columns manga-component" ng-style="recent.action.setClear($index)">
                 <figure class="cover-wrapper">
+                <a ui-sref="detail({ id: manga.i })">
                     <div class="cover-overflow-wrap">
                         <div ng-if="manga.im" style="background-image: url('https://cdn.mangaeden.com/mangasimg/{{manga.im}}')" class="cover"></div>
                         <div ng-if="!manga.im" class="no-image cover"><i class="ion-images"></i></div>
                     </div>
-
-                    <figcaption>
-                        <h3 class="title">{{ manga.t }}</h3>
-                        <a ui-sref="detail({ id: manga.i })">read now</a>
-                    </figcaption>
+                </a>
                 </figure>
 
                 <section class="manga-summary">
@@ -20,6 +17,7 @@
                     <!-- directive to loop through list and generate manga details -->
                     <p manga-description="manga.i"></p>
                     <p>Tags: {{ manga.c | tagClean }}</p>
+                    read now</a>
                 </section>
             </div>
         </div>
